--- a/style.css
+++ b/style.css
@@ -1,14 +1,28 @@
 /* Selector universal */
-* {
+*{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
+
+.protest-revolution-regular {
+    font-family: "Protest Revolution", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 /* Selector de tipo: Etiqueta */
 body {
     background-color: plum;
+    font-family:"Protest Revolution", sans-serif;
+    font-weight: 300;
+    font-style: normal;
     
 }
+
+
+
 main{
     /*Ajustar las tarjetas a varias lineas*/
     display: flex;
@@ -17,6 +31,7 @@ main{
 
 h1 {
     color: white;
+    text-align: center;
     
 }
 
@@ -34,10 +49,19 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 6px;
+
+    margin: 10px;
+    padding: 12px;
+    border: 3px solid black;
+
     transition: all 0.4s ease-in-out; 
     
     
+}
+
+.titulo-tarjeta{
+   margin-bottom: 10px;
+
 }
 
 .tarjeta:hover{ 
@@ -48,10 +72,14 @@ h1 {
 }
 
 .tarjeta .caja-contenedora {
-    width: 200px;
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border: radius 5%;
 }
 
 .tarjeta img {
+    background-color: aliceblue;
     width: 100%;
     object-fit: cover;
     border-radius: 5%;
